Removed br from search widget

--- a/style.css
+++ b/style.css
@@ -20,7 +20,8 @@ h1{
 	font-size: 24px;
 }
 
-.widget_search .screen-reader-text{
+.widget_search .screen-reader-text,
+.widget_search br{
 	display: none;
 }
 
