--- a/style.css
+++ b/style.css
@@ -147,3 +147,8 @@ ul.subpage-list li{
 		text-decoration: none;
 		font-size: 16px;
 	}
+	
+/*General fixes*/
+aside .padding10{
+	padding: 15px;
+}
