--- a/style.css
+++ b/style.css
@@ -156,6 +156,15 @@ ul.subpage-list li{
 		font-size: 16px;
 	}
 	
+/*Orbit Slider*/
+#content .orbit-wrapper .orbit-caption {
+	text-align: left;
+}
+
+#content .orbit-wrapper .orbit-caption h3{
+	margin-bottom: 10px;
+}
+	
 /*General fixes*/
 aside .padding10{
 	padding: 15px;
