--- a/style.css
+++ b/style.css
@@ -164,6 +164,10 @@ ul.subpage-list li{
 #content .orbit-wrapper .orbit-caption h3{
 	margin-bottom: 10px;
 }
+
+#content div.timer{
+	top: -1000px;
+}
 	
 /*General fixes*/
 aside .padding10{
